[gd_scene load_steps=5 format=3 uid="uid://dta0kmj3jy7n3"]

[ext_resource type="Script" path="res://framework/interfaces/user_interfaces/basic_settings.gd" id="1_18nmy"]
[ext_resource type="PackedScene" uid="uid://ehsj1tn7eeu0" path="res://framework/interfaces/value_setters/vector2_value_setter.tscn" id="2_tkr1a"]
[ext_resource type="PackedScene" uid="uid://blaewudqlkvjc" path="res://framework/interfaces/value_setters/enum_value_setter.tscn" id="3_wd618"]
[ext_resource type="PackedScene" uid="uid://b8ble03df5ehg" path="res://framework/interfaces/value_setters/bool_value_setter.tscn" id="4_ctwdm"]

[node name="BasicSettings" type="VBoxContainer"]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_18nmy")

[node name="tabs" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="window_tab" type="Button" parent="tabs"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_WINDOW"

[node name="system_tab" type="Button" parent="tabs"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_SYSTEM"

[node name="window_settings" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 7.0

[node name="VBoxContainer" type="VBoxContainer" parent="window_settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="window_size" parent="window_settings/VBoxContainer" instance=ExtResource("2_tkr1a")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
label_text = "TEXT_WINDOW_SIZE"

[node name="window_mode" parent="window_settings/VBoxContainer" instance=ExtResource("3_wd618")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
label_text = "TEXT_WINDOW_MODE"

[node name="system_settings" type="ScrollContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 7.0

[node name="VBoxContainer" type="VBoxContainer" parent="system_settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="enable_debug_console" parent="system_settings/VBoxContainer" instance=ExtResource("4_ctwdm")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
label_text = "TEXT_ENABLE_DEBUG_CONSOLE"

[node name="pause_when_console" parent="system_settings/VBoxContainer" instance=ExtResource("4_ctwdm")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
label_text = "TEXT_PAUSE_WHEN_CONSOLE"

[node name="language" parent="system_settings/VBoxContainer" instance=ExtResource("3_wd618")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
label_text = "TEXT_LANGUAGE"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="confirm" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_CONFIRM"

[node name="cancel" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_CANCEL"

[node name="apply" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_APPLY"

[connection signal="pressed" from="tabs/window_tab" to="." method="_on_window_tab_pressed"]
[connection signal="pressed" from="tabs/system_tab" to="." method="_on_system_tab_pressed"]
[connection signal="pressed" from="HBoxContainer/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="HBoxContainer/apply" to="." method="_on_apply_pressed"]
